Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,8 @@ steps:
     artifactName: 'drop'
     artifactType: 'container'
   displayName: Publish artifacts
+  - task: GooglePlayRelease@3
+    inputs:
+      authType: 'JsonFile'
+      apkFile: '**/*.apk'
+      track: 'internal'
