--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,10 @@
 # Android
+- task: GooglePlayRelease@3
+  inputs:
+    authType: 'JsonFile'
+    serviceAccountKey: '**/*.json'
+    apkFile: 
+    track: 'internal'
 # Build your Android project with Gradle.
 # Add steps that test, sign, and distribute the APK, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/android
