Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,4 @@
 # Android
-- task: GooglePlayRelease@3
-  inputs:
-    authType: 'JsonFile'
-    serviceAccountKey: '**/*.json'
-    apkFile: 
-    track: 'internal'
 # Build your Android project with Gradle.
 # Add steps that test, sign, and distribute the APK, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/android
@@ -43,5 +37,5 @@ steps:
   inputs:
     authType: 'JsonFile'
     serviceAccountKey: '**/*.json'
-    apkFile: 
+    apkFile: '**/*.apk'
     track: 'internal'
