Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,6 @@ steps:
 - task: GooglePlayRelease@3
   inputs:
     authType: 'JsonFile'
-    serviceAccountKey: '**/*.json'
+    serviceAccountKey: '*.json'
     apkFile: '**/*.apk'
     track: 'internal'
