Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,10 @@ steps:
   
 - task: GooglePlayRelease@3
   inputs:
+- task: GooglePlayRelease@3
+  inputs:
     authType: 'JsonFile'
-    serviceAccountKey: '*.json'
+    serviceAccountKey: '$(System.DefaultWorkingDirectory)'
     apkFile: '**/*.apk'
     track: 'internal'
+    
