--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
 - task: GooglePlayRelease@3
   inputs:
     authType: 'JsonFile'
-    serviceAccountKey: '$(System.DefaultWorkingDirectory)'
+    serviceAccountKey: '$(build.artifactStagingDirectory)'
     apkFile: '**/*.apk'
     track: 'internal'
     
